--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx</artifactId>
+      <version>23-ea+3</version>
+      <type>pom</type>
+    </dependency>
+    
+    <dependency>
       <groupId>org.drools</groupId>
       <artifactId>drools-engine-classic</artifactId>
     </dependency>
@@ -65,7 +72,24 @@
         <version>${drools-version}</version>
         <extensions>true</extensions>
       </plugin>
-    </plugins>
-
+      <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <!-- Here come other details
+              ...
+              -->
+              <configuration>
+                <archive>
+                  <manifest>
+                    <addClasspath>true</addClasspath>
+                    <mainClass>fully.qualified.MainClass</mainClass>
+                  </manifest>
+                </archive>
+              </configuration>
+              <!-- Here come other details
+              ...
+              -->
+        </plugin>    
+      </plugins>
   </build>
 </project>
