--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <drools-version>8.27.0.Beta</drools-version>
+    <maven.compiler.release>11</maven.compiler.release>
+    <drools-version>8.44.0.Final</drools-version>
     <slf4j-version>1.7.30</slf4j-version>
     <junit-version>4.13.1</junit-version>
+    <logback-version>1.2.9</logback-version>
   </properties>
 
   <dependencyManagement>
@@ -36,10 +38,14 @@
       <version>23-ea+3</version>
       <type>pom</type>
     </dependency>
-    
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>23-ea+3</version>
+    </dependency>    
     <dependency>
       <groupId>org.drools</groupId>
-      <artifactId>drools-engine-classic</artifactId>
+      <artifactId>drools-ruleunits-engine</artifactId>
     </dependency>
 
     <dependency>
@@ -48,23 +54,13 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j-version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+        <version>3.8.1</version>
       </plugin>
       <plugin>
         <groupId>org.kie</groupId>
@@ -73,23 +69,14 @@
         <extensions>true</extensions>
       </plugin>
       <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-jar-plugin</artifactId>
-              <!-- Here come other details
-              ...
-              -->
-              <configuration>
-                <archive>
-                  <manifest>
-                    <addClasspath>true</addClasspath>
-                    <mainClass>fully.qualified.MainClass</mainClass>
-                  </manifest>
-                </archive>
-              </configuration>
-              <!-- Here come other details
-              ...
-              -->
-        </plugin>    
-      </plugins>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+              <mainClass>app.Main</mainClass>
+          </configuration>
+      </plugin>
+    </plugins>
+
   </build>
 </project>
