--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.45.1.0</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx</artifactId>
       <version>23-ea+3</version>
