--- a/pom.xml
+++ b/pom.xml
@@ -36,36 +36,37 @@
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.45.1.0</version>
+      <scope>compile</scope>
     </dependency>
-
-
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx</artifactId>
       <version>23-ea+3</version>
       <type>pom</type>
+      <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-fxml</artifactId>
         <version>23-ea+3</version>
+        <scope>compile</scope>
     </dependency>    
     <dependency>
       <groupId>org.drools</groupId>
       <artifactId>drools-ruleunits-engine</artifactId>
+      <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit-version}</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>org.mindrot</groupId>
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
@@ -122,6 +123,11 @@
                           </excludes>
                       </filter>
                     </filters>
+                    <artifactSet>
+                      <includes>
+                          <include>*:*</include>
+                      </includes>
+                    </artifactSet>
                   </configuration>
               </execution>
           </executions>
