Ahora el test jar al menos tiene el mismo error q el jar normal JEJ🫠

--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
       <version>0.4</version>
       <scope>compile</scope>
     </dependency>
-
+  <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-wiring-dynamic</artifactId>
+      <scope>compile</scope>
+  </dependency>
   </dependencies>
 
   <build>
