--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>group3</groupId>
   <artifactId>copd_dss</artifactId>
-  <version>2.0</version>
+  <version>final</version>
   <packaging>kjar</packaging>
 
   <name>dssproject_copd</name>
